--- a/package.json
+++ b/package.json
@@ -1,26 +1,30 @@
 {
-  "name": "express-friends",
-  "version": "0.0.0",
-  "private": true,
-  "scripts": {
-	  "test": "mocha --exit",
-	  "start": "nodemon app.js"
-  },
-  "author": "Huang Chao",
-  "license": "ISC",
-  "dependencies": {
-    "body-parser": "~1.17.1",
-    "debug": "~2.6.3",
-    "express": "~4.15.2",
-    "mysql": "^2.15.0",
-    "q": "^1.5.1",
-    "querystring": "^0.2.0",
-    "url": "^0.11.0"
-  },
-  "devDependencies": {
-    "chai": "^4.1.2",
-    "chai-http": "^3.0.0",
-    "mocha": "^4.0.1",
-    "nodemon": "^1.13.3"
-  }
+	"name": "express-friends",
+	"version": "0.0.0",
+	"private": true,
+	"scripts": {
+		"test": "mocha --exit",
+		"start": "nodemon app.js"
+	},
+	"repository": {
+		"type": "git",
+		"url": "https://www.github.com/HuangChaoWH/express_friends"
+	},
+	"author": "Huang Chao",
+	"license": "ISC",
+	"dependencies": {
+		"body-parser": "~1.17.1",
+		"debug": "~2.6.3",
+		"express": "~4.15.2",
+		"mysql": "^2.15.0",
+		"q": "^1.5.1",
+		"querystring": "^0.2.0",
+		"url": "^0.11.0"
+	},
+	"devDependencies": {
+		"chai": "^4.1.2",
+		"chai-http": "^3.0.0",
+		"mocha": "^4.0.1",
+		"nodemon": "^1.13.3"
+	}
 }
